flux/media/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: usage
                    operator: In
                    values:
                      - worker
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: prowlarr
          image: ghcr.io/hotio/prowlarr:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - name: http
              containerPort: 9696
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tun
              mountPath: /dev/net/tun
            - name: proton
              mountPath: /config/wireguard/wg0.conf
              subPath: wg0.conf
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: proton
          secret:
            secretName: proton
        - name: tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
