flux/media/prowlarr/http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
  labels:
    app.kubernetes.io/name: prowlarr
  annotations:
    ksbh.rs/modules: "https,oidc"
spec:
  ingressClassName: ksbh
  tls:
    - secretName: kys-dog
      hosts:
        - prowlarr.kys.dog
  rules:
    - host: prowlarr.kys.dog
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
